<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="remember_me">Remember me</string>
    <string name="confirmation_dialog">Create a new account?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>

    <string name="Logo">Logo</string>
    <string name="appName">SMART SAFE</string>
    <string name="instructions">Please place your finger on the scanner to complete the authentication process.</string>
    <string name="fingerprint">Fingerprint</string>

    <string name="tab_text_1">Daily</string>
    <string name="tab_text_2">Weekly</string>
    <string name="tab_text_3">Monthly</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Overview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="userEmail"></string>

    <string name="chart">Pie Chart</string>
    <string name="balance_title">Balance \n€€€€</string>

    <string name="no_data">Sorry, there is no data for this time interval.</string>

    <!--TRANSACTION ACTIVITY-->
    <string name="title_activity_transaction">New expense</string>
    <string name="income_title">NEW INCOME</string>
    <string name="expense_title">NEW EXPENSE</string>
    <string name="categorylogo">Category Logo</string>
    <string name="category">Category:</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_title">Enter title</string>
    <string name="make_periodical">Periodical</string>
    <string name="pick_date">Date</string>
    <string name="save_transaction">Save</string>

    <string-array name="spinnerItems">
        <item> </item>
        <item>Leisure</item>
        <item>Other</item>
        <item>Shopping</item>
        <item>Travel</item>
        <item>Personal</item>
    </string-array>

    <string name="title_activity_budget">Monthly Budget</string>

    <string name="title_activity_settings">Settings</string>
    <string name="total">Total</string>
    <string name="total_num">--.--€</string>
    <string name="leisure">Leisure</string>
    <string name="personal">Personal</string>
    <string name="travel">Travel</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
    <string name="saved_correctly">Saved successfully</string>
    <string name="save_settings">Save settings</string>


</resources>
