<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monthly_budget_title"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="36dp"
                android:layout_weight="80"
                android:text="@string/title_activity_budget"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/total_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:hint="@string/total_num"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/leisure_ImageView"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/categorylogo" />

            <TextView
                android:id="@+id/leisure_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@string/leisure" />

            <EditText
                android:id="@+id/leisure_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/total_num"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shopping_ImageView"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/categorylogo" />

            <TextView
                android:id="@+id/shopping_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/shopping" />

            <EditText
                android:id="@+id/shopping_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/total_num"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/personal_ImageView"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/categorylogo" />

            <TextView
                android:id="@+id/personal_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/personal" />

            <EditText
                android:id="@+id/personal_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/total_num"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/travel_ImageView"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/categorylogo" />

            <TextView
                android:id="@+id/travel_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/travel" />

            <EditText
                android:id="@+id/travel_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/total_num"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/other_ImageView"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/categorylogo" />

            <TextView
                android:id="@+id/other_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:text="@string/other" />

            <EditText
                android:id="@+id/other_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:hint="@string/total_num"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/save_settings"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>